log
Wed 12 Apr 2023 06:51:33 PM UTC: 
 tests:  0|6
total_score: 0/70
9a1e8ef
Wed 12 Apr 2023 09:51:17 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fe85d7c
Wed 12 Apr 2023 09:59:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘clave’ [-Werror=unused-variable]
   43 |   long clave = hash(key,map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0d59391
Wed 12 Apr 2023 10:29:12 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 10/70
1c0f039
Wed 12 Apr 2023 10:30:06 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
a3ddf4f
Wed 12 Apr 2023 10:34:02 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5780ed0
Wed 12 Apr 2023 10:38:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ebf6e2
Wed 12 Apr 2023 10:44:45 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
7400500
Wed 12 Apr 2023 10:45:30 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 20/70
1a67af5
Wed 12 Apr 2023 10:50:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
a3ec8f4
